This file contains a brief overview of the changes made in each release.
A detailed description of changes are available in the CHANGES.current
and CHANGES files.

Release Notes
=============

LayerManager-0.8.1 summary:
- Add scene show and hide function.

LayerManager-0.8.0 summary:
- Layer Manager is the Python plugin in iClone, providing
  choose avatar and prop objects to add visible key in current scene time.