@@ -22,13 +22,13 @@ def global_get_avatars(active):
     avatar_list = []
     if active:
         avatar_type = RLPy.EAvatarType_Standard | RLPy.EAvatarType_NonStandard | RLPy.EAvatarType_StandardSeries
-        avatar_list = RLPy.RGlobal.GetAvatars(avatar_type)
+        avatar_list = RLPy.RScene.GetAvatars(avatar_type)
     return avatar_list
 
 def global_get_props(active):
     prop_list = []
     if active:
-        prop_list = RLPy.RGlobal.GetProps()
+        prop_list = RLPy.RScene.GetProps()
     return prop_list
         
 class REventListenerCallback(RLPy.REventCallback):
@@ -96,23 +96,26 @@ class LayerManagerTreeWidget(QTreeWidget):
         self.itemChanged.connect(self.on_item_changed)
     
     def on_item_changed (self, current, previous):
+        #print (self, current.childCount())
         for key, value in self.items_dict.items():
+
             for key2, value2 in self.items_dict[key].items():
                 if (value2.checkState(0)==Qt.Checked):
-                    #print (key2 + " set visible" )
+                    #print (key + " set visible" )
                     for item in self.scene_objects:
                         _name = item.GetName()
                         if (_name == key2):
                             RLPy.RScene.Show(item)
                 else:
                     #print (key2 + " set invisible" )
+                    #print (key + " set visible" )
                     for item in self.scene_objects:
                         _name = item.GetName()
                         if (_name == key2):
                             RLPy.RScene.Hide(item)
     
     def on_object_selection_changed(self):
-        _selected_items = RLPy.RGlobal.GetSelectedObjects()
+        _selected_items = RLPy.RScene.GetSelectedObjects()
 
         for key, value in self.items_dict.items():
             for key2, value2 in self.items_dict[key].items():
@@ -143,10 +146,12 @@ class LayerManagerTreeWidget(QTreeWidget):
         item.setText(0, 'Layer001')
         item.setCheckState(0,Qt.Unchecked)
 
-        item.setFlags(item.flags() | Qt.ItemIsEditable)
+        item.setFlags(item.flags() | Qt.ItemIsTristate | Qt.ItemIsUserCheckable | Qt.ItemIsEditable )
 
         self.addTopLevelItem(item)
-
+        self.items_dict["Layer001"] = {}
+        self.items_dict["Layer001"]["Layer001"] = item
+        
     def remove_item(self, item):
         parent = item.parent()
         if parent:
